--- a/Worm v.1
+++ b/Worm v.1
@@ -16,7 +16,7 @@ import socket
 BASE_IP = "192.168.0.%i"
 PORT = 80
 COUNT = 3
-RICKLOC = "\\rick_eternal.mp4"
+RICKLOC = "\\Rick_Eternal.mp4"
 
 #------------------------------------------THREADER CLASS---------------------------------------------- -AR
 class Threader:
